--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <!-- You have a funny feeling like you're being followed. -->
 <!-- Song & Poem are accredited to Dan Salvato of https://ddlc.moe -->
-<!-- Everything else is licensed under WTFPLv2, available at smol.fi/license.txt -->
+<!-- Everything else is licensed under MIT License, available at smol.fi/license.txt -->
 <head>
 	<title>happy thoughts</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
